Fixed bug with scaling, added container to hide scrollbar.

--- a/InfiniteScroll.css
+++ b/InfiniteScroll.css
@@ -1,3 +1,9 @@
+#container {
+    overflow: hidden;
+    background: white;
+    padding: 50px; /* for space when scaling*/
+}
+
 /*infinite-scroll*/
 
 .infinite-scroll {
